--- a/index.html
+++ b/index.html
@@ -3,13 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Portfolio</title>
+    <title>Mouaz Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="shortcut icon"
-      href="https://i.postimg.cc/9fqYVvxh/logo.png"
-      type="image/x-icon"
-    />
   </head>
   <body>
     <main>
@@ -51,7 +46,7 @@
                 >
               </div>
             </li>
-
+            <!-- 
             <li class="contact-item">
               <div class="icon-box">
                 <ion-icon name="phone-portrait-outline"></ion-icon>
@@ -60,11 +55,11 @@
               <div class="contact-info">
                 <p class="contact-title">Phone</p>
 
-                <a href="tel:+4915737886860" class="contact-link"
-                  >+4915737886860</a
+                <a href="" class="contact-link"
+                  >Private</a
                 >
               </div>
-            </li>
+            </li> -->
 
             <!-- <li class="contact-item">
               <div class="icon-box">
@@ -80,21 +75,37 @@
 
             <li class="contact-item">
               <div class="icon-box">
+                <ion-icon name="logo-linkedin"></ion-icon>
+              </div>
+
+              <div class="contact-info">
+                <p class="contact-title">LinkedIn</p>
+                <a
+                  href="https://www.linkedin.com/in/muath-allahham/"
+                  class="contact-link"
+                  target="_blank"
+                  >linkedin.com/in/muath-allahham</a
+                >
+              </div>
+            </li>
+
+            <li class="contact-item">
+              <div class="icon-box">
                 <ion-icon name="location-outline"></ion-icon>
               </div>
 
               <div class="contact-info">
                 <p class="contact-title">Location</p>
 
-                <address>Pfalzgrafenweiler, Germany</address>
+                <address>Freudenstadt, Germany</address>
               </div>
             </li>
           </ul>
 
           <div class="separator"></div>
 
-          <ul class="social-list">
-            <!-- <li class="social-item">
+          <!-- <ul class="social-list">
+            <li class="social-item">
               <a href="#" class="social-link"
                 ><ion-icon name="logo-facebook"></ion-icon
               ></a>
@@ -108,8 +119,8 @@
               <a href="#" class="social-link"
                 ><ion-icon name="logo-instagram"></ion-icon
               ></a>
-            </li> -->
-          </ul>
+            </li>
+          </ul> -->
         </div>
       </aside>
 
@@ -142,9 +153,11 @@
           <section class="about-text">
             <p>
               I'm a full stack developer and machine learning engineer with a
-              background in both web development and data science. Since
-              Septemper 2024, I have been building dynamic, responsive websites
-              and e-commerce platforms for Businesses in Germany, using modern
+              background in web development, data science, and building solutions at the intersection of technology and business development. 
+            </p>
+            <p>
+              Since September 2024, I have been building dynamic, responsive websites
+              and e-commerce platforms for businesses in Germany, using modern
               frameworks like React.js, Next.js, and SvelteKit—connecting them
               to CMS platforms such as WordPress, Contao, and ModX.
             </p>
@@ -179,11 +192,78 @@
 
               <li class="service-item">
                 <div class="service-icon-box">
-                  <img
-                    src="https://i.postimg.cc/4389jZkP/icon-design.png"
+                  <!-- <img
+                    src="assets/website-logo.svg"
                     alt="icon"
                     width="40"
-                  />
+                    class="icon"
+                  /> -->
+
+                  <svg
+                    width="40px"
+                    height="40px"
+                    viewBox="0 0 64 64"
+                    version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"
+                    class="icon"
+                  >
+                    <g
+                      id="Page-1"
+                      stroke="none"
+                      stroke-width="1"
+                      fill="none"
+                      fill-rule="evenodd"
+                      sketch:type="MSPage"
+                    >
+                      <g
+                        id="Network"
+                        sketch:type="MSLayerGroup"
+                        transform="translate(1.000000, 1.000000)"
+                        stroke="#6B6C6E"
+                        stroke-width="2"
+                      >
+                        <circle
+                          id="Oval"
+                          sketch:type="MSShapeGroup"
+                          cx="31"
+                          cy="31"
+                          r="31"
+                        ></circle>
+                        <path
+                          d="M21.2,60.1 C16.6,51.4 14,41.5 14,31.1 C14,20.7 16.6,10.8 21.2,2.1"
+                          id="Shape"
+                          sketch:type="MSShapeGroup"
+                        ></path>
+                        <path
+                          d="M40.8,2.1 C45.4,10.8 48,20.7 48,31.1 C48,41.5 45.4,51.4 40.8,60.1"
+                          id="Shape"
+                          sketch:type="MSShapeGroup"
+                        ></path>
+                        <path
+                          d="M4,16.1 L58,16.1"
+                          id="Shape"
+                          sketch:type="MSShapeGroup"
+                        ></path>
+                        <path
+                          d="M0,31.1 L62,31.1"
+                          id="Shape"
+                          sketch:type="MSShapeGroup"
+                        ></path>
+                        <path
+                          d="M4,46.1 L58,46.1"
+                          id="Shape"
+                          sketch:type="MSShapeGroup"
+                        ></path>
+                        <path
+                          d="M31,0.1 L31,62.1"
+                          id="Shape"
+                          sketch:type="MSShapeGroup"
+                        ></path>
+                      </g>
+                    </g>
+                  </svg>
                 </div>
 
                 <div class="service-content-box">
@@ -215,11 +295,59 @@
 
               <li class="service-item">
                 <div class="service-icon-box">
-                  <img
+                  <!-- <img
                     src="https://i.postimg.cc/QtDphVK8/brain.png"
                     alt="icon"
                     width="40"
-                  />
+                  /> -->
+
+                  <svg
+                    fill="#000000"
+                    version="1.1"
+                    id="Layer_1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    viewBox="0 0 32 32"
+                    xml:space="preserve"
+                    width="40px"
+                    height="40px"
+                    class="icon"
+                  >
+                    <path
+                      id="machine--learning--06_1_"
+                      d="M12,30.36c-1.47,0-2.852-0.766-3.653-2.011C5.703,28.24,3.64,26.106,3.64,23.5
+                  c0-0.899,0.252-1.771,0.733-2.544C2.678,19.887,1.64,18.021,1.64,16s1.038-3.886,2.733-4.957C3.893,10.271,3.64,9.4,3.64,8.5
+                  c0-2.63,2.101-4.779,4.712-4.858C9.155,2.402,10.534,1.64,12,1.64c2.404,0,4.36,1.956,4.36,4.36v4.64H25
+                  c0.904,0,1.64-0.736,1.64-1.64V7.312c-0.575-0.158-1-0.686-1-1.312c0-0.75,0.61-1.36,1.36-1.36S28.36,5.25,28.36,6
+                  c0,0.625-0.425,1.153-1,1.312V9c0,1.301-1.059,2.36-2.36,2.36h-8.64v2.28h11.329c0.158-0.576,0.687-1,1.312-1
+                  c0.75,0,1.36,0.61,1.36,1.36s-0.61,1.36-1.36,1.36c-0.625,0-1.153-0.424-1.312-1H16.36v3.28h11.329c0.158-0.575,0.687-1,1.312-1
+                  c0.75,0,1.36,0.61,1.36,1.36s-0.61,1.36-1.36,1.36c-0.625,0-1.153-0.425-1.312-1H16.36v2.279H25c1.302,0,2.36,1.059,2.36,2.36v1.688
+                  c0.575,0.158,1,0.687,1,1.312c0,0.75-0.61,1.36-1.36,1.36s-1.36-0.61-1.36-1.36c0-0.625,0.425-1.153,1-1.312V23
+                  c0-0.904-0.735-1.64-1.64-1.64h-8.64V26C16.36,28.404,14.404,30.36,12,30.36z M8.721,27.628l0.143,0.186
+                  C9.526,28.957,10.699,29.64,12,29.64c2.007,0,3.64-1.633,3.64-3.64V6c0-2.007-1.633-3.64-3.64-3.64
+                  c-1.301,0-2.474,0.683-3.137,1.826L8.747,4.365C8.493,4.869,8.36,5.431,8.36,6c0,0.64,0.168,1.269,0.487,1.82L8.224,8.18
+                  C7.842,7.521,7.64,6.766,7.64,6c0-0.547,0.103-1.088,0.3-1.593C5.901,4.694,4.36,6.42,4.36,8.5c0,0.876,0.283,1.722,0.817,2.446
+                  l0.246,0.333l-0.364,0.197C3.394,12.377,2.36,14.11,2.36,16c0,1.785,0.922,3.43,2.427,4.365C5.713,19.268,7.061,18.64,8.5,18.64
+                  v0.721c-1.206,0-2.336,0.517-3.125,1.424l-0.198,0.27C4.643,21.778,4.36,22.624,4.36,23.5c0,2.283,1.857,4.14,4.14,4.14
+                  L8.721,27.628z M27,25.36c-0.353,0-0.64,0.287-0.64,0.64s0.287,0.64,0.64,0.64s0.64-0.287,0.64-0.64S27.353,25.36,27,25.36z
+                  M29,17.36c-0.353,0-0.64,0.287-0.64,0.64s0.287,0.64,0.64,0.64s0.64-0.287,0.64-0.64S29.353,17.36,29,17.36z M29,13.36
+                  c-0.353,0-0.64,0.287-0.64,0.64s0.287,0.64,0.64,0.64s0.64-0.287,0.64-0.64S29.353,13.36,29,13.36z M27,5.36
+                  c-0.353,0-0.64,0.287-0.64,0.64S26.647,6.64,27,6.64S27.64,6.353,27.64,6S27.353,5.36,27,5.36z M12,28.36v-0.72
+                  c0.904,0,1.64-0.735,1.64-1.64h0.72C14.36,27.302,13.301,28.36,12,28.36z M9,26.36c-1.577,0-2.86-1.283-2.86-2.86h0.72
+                  c0,1.18,0.96,2.14,2.14,2.14C9,25.64,9,26.36,9,26.36z M12,24.36c-1.301,0-2.36-1.059-2.36-2.36s1.059-2.36,2.36-2.36v0.721
+                  c-0.904,0-1.64,0.735-1.64,1.64s0.736,1.64,1.64,1.64V24.36z M6.332,16.667C5.886,16.221,5.64,15.629,5.64,15
+                  c0-1.39,0.97-2.36,2.36-2.36c0.641,0,1.218,0.238,1.669,0.689l-0.51,0.509C8.847,13.525,8.446,13.36,8,13.36
+                  c-0.996,0-1.64,0.644-1.64,1.64c0,0.437,0.171,0.848,0.48,1.158L6.332,16.667z M12,12.86v-0.72c0.904,0,1.64-0.736,1.64-1.64
+                  S12.904,8.86,12,8.86V8.14c1.301,0,2.36,1.059,2.36,2.36S13.301,12.86,12,12.86z M14.36,6h-0.72c0-0.904-0.736-1.64-1.64-1.64
+                  S10.36,5.096,10.36,6H9.64c0-1.301,1.059-2.36,2.36-2.36S14.36,4.699,14.36,6z"
+                    />
+                    <rect
+                      id="_Transparent_Rectangle"
+                      style="fill: none"
+                      width="32"
+                      height="32"
+                    />
+                  </svg>
                 </div>
 
                 <div class="service-content-box">
@@ -470,14 +598,14 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  Webentwickler - Martini Werbeagentur
+                  Software Engineer - Martini Werbeagentur
                 </h4>
                 <span>09/2024 - Present</span>
                 <p class="timeline-text">
                   Creating dynamic, responsive websites and e-commerce platforms
                   for businesses in Germany, using frameworks like React.js,
                   Next.js, and SvelteKit, as well as vanilla JavaScript/CSS, and
-                  integrating with various CMSs including WordPress, Contao, and
+                  integrating with various CMS including WordPress, Contao, and
                   ModX.
                 </p>
               </li>
@@ -544,7 +672,9 @@
                 <p class="timeline-text">
                   Grade: Very Good <br />
                   Major: Structural and Geotechnical Engineering <br />
-                  Publications: "Efficient pile distribution for piled-raft foundations for tall buildings". American Society for Civil Engineers (ASCE)
+                  Publications: "Efficient pile distribution for piled-raft
+                  foundations for tall buildings". American Society for Civil
+                  Engineers (ASCE)
                 </p>
               </li>
             </ol>
@@ -600,34 +730,32 @@
               </li>
             </ul> -->
 
-            <div class="filter-select-box">
-              <button class="filter-select" data-select>
-                <div class="select-value" data-select-value>
-                  Select Category
-                </div>
+          <div class="filter-select-box">
+            <button class="filter-select" data-select>
+              <div class="select-value" data-select-value>Select Category</div>
 
-                <div class="select-icon">
-                  <ion-icon name="chevron-down"></ion-icon>
-                </div>
-              </button>
+              <div class="select-icon">
+                <ion-icon name="chevron-down"></ion-icon>
+              </div>
+            </button>
 
-              <ul class="select-list">
-                <li class="select-item">
-                  <button data-select-item>All</button>
-                </li>
-                <li class="select-item">
-                  <button data-select-item>Web Design</button>
-                </li>
-                <li class="select-item">
-                  <button data-select-item>Applications</button>
-                </li>
-                <li class="select-item">
-                  <button data-select-item>Web Development</button>
-                </li>
-              </ul>
-            </div>
+            <ul class="select-list">
+              <li class="select-item">
+                <button data-select-item>All</button>
+              </li>
+              <li class="select-item">
+                <button data-select-item>Web Design</button>
+              </li>
+              <li class="select-item">
+                <button data-select-item>Applications</button>
+              </li>
+              <li class="select-item">
+                <button data-select-item>Web Development</button>
+              </li>
+            </ul>
+          </div>
 
-            <!-- <ul class="project-list">
+          <!-- <ul class="project-list">
               <li
                 class="project-item active"
                 data-filter-item
@@ -835,7 +963,7 @@
                 </a>
               </li>
             </ul> -->
-          </section>
+          <!-- </section> -->
         </article>
 
         <article class="blog" data-page="blog">
